Add more comp sci stuff

--- a/index.html
+++ b/index.html
@@ -218,6 +218,8 @@
 
 <h3>Fundamentals</h3>
 
+<p>Many of these courses assume some knowledge of Python (or, will teach it to you). If you&#39;d like a good primer, check out the <a href="http://www.codecademy.com/tracks/python">Python Track at Codecademy</a>. Then, check out the following:</p>
+
 <h3><a href="https://www.coursera.org/course/cs101">Computer Science 101</a></h3>
 
 <p><a href="https://www.coursera.org/course/cs101">https://www.coursera.org/course/cs101</a></p>
@@ -244,37 +246,91 @@
 
 <h3>Algorithms</h3>
 
-<p>Algorithms, Part I: https://www.coursera.org/course/algs4partI</p>
+<p>Many of these courses assume some prior experience with Java. Try going through the tutorial at <a href="http://www.learnjavaonline.org/">Learn Java Online</a> before approaching the following:</p>
 
-<p>Algorithms, Part II https://www.coursera.org/course/algs4partII</p>
+<h3><a href="https://www.coursera.org/course/algs4partI">Algorithms, Part I</a></h3>
 
-<p>Algorithms https://www.udacity.com/course/cs215</p>
+<p><a href="https://www.coursera.org/course/algs4partI">https://www.coursera.org/course/algs4partI</a></p>
 
-<p>Algorithms: Design and Analysis, Part I (https://www.coursera.org/course/algo)</p>
+<p>This Princeton course covers the essential information that every serious programmer needs to know about algorithms and data structures, with emphasis on applications and scientific performance analysis of Java implementations. Specific topics covered include: union-find algorithms; basic iterable data types (stacks, queues, and bags); sorting algorithms (quicksort, mergesort, heapsort) and applications; priority queues; binary search trees; red-black trees; hash tables; and symbol-table applications.</p>
 
-<p>Algorithms: Design and Analysis, Part II (https://www.coursera.org/course/algo2)</p>
+<h3><a href="https://www.coursera.org/course/algs4partII">Algorithms, Part II</a></h3>
 
-<p>Analysis of Algorithms https://www.coursera.org/course/aofa</p>
+<p><a href="https://www.coursera.org/course/algs4partII">https://www.coursera.org/course/algs4partII</a></p>
 
-<p>Algorithmic Thinking https://www.coursera.org/course/algorithmicthink</p>
+<p>Part II of this Princeton course covers graph-processing algorithms, including minimum spanning tree and shortest paths algorithms, and string processing algorithms, including string sorts, tries, substring search, regular expressions, and data compression.</p>
 
-<p>Discrete Optimization https://www.coursera.org/course/optimization</p>
+<h3><a href="https://www.udacity.com/course/cs215">Algorithms: Crunching Social Networks</a></h3>
+
+<p><a href="https://www.udacity.com/course/cs215">https://www.udacity.com/course/cs215</a></p>
+
+<p>Ever played the Kevin Bacon game? This class will sho you how it works by giving you an introduction to the design and analysis of algorithms, enabling you to discover how individuals are connected.</p>
+
+<h3><a href="https://www.coursera.org/course/algo">Algorithms: Design and Analysis, Part I</a></h3>
+
+<p><a href="https://www.coursera.org/course/algo">https://www.coursera.org/course/algo</a></p>
+
+<p>In this course you will learn several fundamental principles of algorithm design. You&#39;ll learn the divide-and-conquer design paradigm, with applications to fast sorting, searching, and multiplication. Divide-and-conquer methods, graph algorithms, practical data structures (heaps, has tables, search trees), randomized algorithms, and more will all be covered.</p>
+
+<h3><a href="https://www.coursera.org/course/algo2">Algorithms: Design and Analysis, Part II</a></h3>
+
+<p><a href="https://www.coursera.org/course/algo2">https://www.coursera.org/course/algo2</a></p>
+
+<p>In this course you will learn several fundamental principles of advanced algorithm design: greedy algorithms and applications; dynamic programming and applications; NP-completeness and what it means for the algorithm designer; the design and analysis of heuristics; and more.</p>
+
+<h3><a href="https://www.coursera.org/course/aofa">Analysis of Algorithms</a></h3>
+
+<p><a href="https://www.coursera.org/course/aofa">https://www.coursera.org/course/aofa</a></p>
+
+<p><strong>Note:</strong> <em>This course is super mathy. It assumes a knowledge of calculus. Only nerd out on this one if you are super into that kind of stuff. Totally skip it otherwise.</em></p>
+
+<p>This course teaches a calculus that enables precise quantitative predictions of large combinatorial structures. In addition, this course covers generating functions and real asymptotics and then introduces the symbolic method in the context of applications in the analysis of algorithms and basic structures such as permutations, trees, strings, words, and mappings.</p>
+
+<h3><a href="https://www.coursera.org/course/algorithmicthink">Algorithmic Thinking</a></h3>
+
+<p><a href="https://www.coursera.org/course/algorithmicthink">https://www.coursera.org/course/algorithmicthink</a></p>
+
+<p>When presented with a problem from a scientific domain, a Computer Scientist goes through a set of steps in order to provide a solution for the problem. These steps include: (1) understanding the problem; (2) formulating the problem mathematically; (3) designing an algorithm; (4) implementing the algorithm; and (5) solving the original scientific problem. This course will train students in how to employ algorithmic thinking by following these five steps to solve real-world problems.</p>
+
+<h3><a href="https://www.coursera.org/course/optimization">Discrete Optimization</a></h3>
+
+<p><a href="https://www.coursera.org/course/optimization">https://www.coursera.org/course/optimization</a></p>
+
+<p>Tired of solving Sudokus by hand? This class teaches you how to solve complex search problems with discrete optimization concepts and algorithms, including constraint programming, local search, and mixed-integer programming.</p>
 
 <h3>Big-O</h3>
 
-<p>Big-O Cheat Sheet http://bigocheatsheet.com/</p>
+<h3><a href="http://bigocheatsheet.com/">Big-O Cheat Sheet</a></h3>
 
-<p>Codecademy Big O Course http://www.codecademy.com/courses/big-o/0/1</p>
+<p><a href="http://bigocheatsheet.com/">http://bigocheatsheet.com/</a></p>
 
-<h3>Misc</h3>
+<p>This site covers the space and time Big-O complexities of common algorithms used in Computer Science. This is a <em>great</em> place to review tons and tons of sorting algorithms. It&#39;s worth adding as a bookmark and reviewing from time to time.</p>
 
-<p>Introduction to Bitwise Operators http://www.codecademy.com/courses/introduction-to-bitwise-operators/0/1</p>
+<h3><a href="http://www.codecademy.com/courses/big-o/0/1">Big-O</a></h3>
 
-<p>Stacks and Queues http://www.codecademy.com/courses/stacks-and-queues/0/1</p>
+<p><a href="http://www.codecademy.com/courses/big-o/0/1">http://www.codecademy.com/courses/big-o/0/1</a></p>
 
-<p>Recursive Functions http://www.codecademy.com/courses/javascript-lesson-149/0/1</p>
+<p>This is a really nice, quick course that takes you through what we mean by Big-O. Check it out at Codecademy.</p>
 
-<p>coursera, udacity, mit-edx</p>
+<h3>Miscellaneous</h3>
+
+<h3><a href="http://www.codecademy.com/courses/introduction-to-bitwise-operators/0/1">Introduction to Bitwise Operators</a></h3>
+
+<p><a href="http://www.codecademy.com/courses/introduction-to-bitwise-operators/0/1">http://www.codecademy.com/courses/introduction-to-bitwise-operators/0/1</a></p>
+
+<p>This is another bite-sized course from Codecademy you can go through that teaches the basics of bitwise operators.</p>
+
+<h3><a href="http://www.codecademy.com/courses/stacks-and-queues/0/1">Stacks and Queues</a></h3>
+
+<p><a href="http://www.codecademy.com/courses/stacks-and-queues/0/1">http://www.codecademy.com/courses/stacks-and-queues/0/1</a></p>
+
+<p>Want a quick refresher on some non-array data structures? Go through this Codecademy course on stacks and queues.</p>
+
+<h3><a href="http://www.codecademy.com/courses/javascript-lesson-149/0/1">Recursive Functions</a></h3>
+
+<p><a href="http://www.codecademy.com/courses/javascript-lesson-149/0/1">http://www.codecademy.com/courses/javascript-lesson-149/0/1</a></p>
+
+<p>Codecademy, again, teaches you about recursion.</p>
 
 <h1>Ruby &amp; Rails</h1>
 
