Remove unnecessary web folder

--- a/index.html
+++ b/index.html
@@ -641,115 +641,115 @@ https://leanpub.com/nodebeginner
 https://leanpub.com/nodecraftsman
 http://nodeschool.io/</p>
 
-<h1>iOS &amp; RubyMotion</h1>
+<!---
+# iOS & RubyMotion
 
-<h2>Objective-C</h2>
+## Objective-C
 
-<p>Before even thinking about iOS development, you need to become proficient at the Objective-C language. Just like we learned the fundamentals of Ruby before jumping into the behemoth that is the Rails framework, you&#39;ll want to grok the fundamentals of Objective-C before wrestling with the XCode and the whole iOS ecosystem.</p>
+Before even thinking about iOS development, you need to become proficient at the Objective-C language. Just like we learned the fundamentals of Ruby before jumping into the behemoth that is the Rails framework, you'll want to grok the fundamentals of Objective-C before wrestling with the XCode and the whole iOS ecosystem.
 
-<h3><a href="https://www.codeschool.com/courses/try-objective-c">Try Objective-C</a></h3>
+### [Try Objective-C](https://www.codeschool.com/courses/try-objective-c)
 
-<p><a href="https://www.codeschool.com/courses/try-objective-c">https://www.codeschool.com/courses/try-objective-c</a></p>
+[https://www.codeschool.com/courses/try-objective-c](https://www.codeschool.com/courses/try-objective-c)
 
-<p>Code School&#39;s course is a great way to quickly cover the basics of the Objective-C language.</p>
+Code School's course is a great way to quickly cover the basics of the Objective-C language.
 
-<h3><a href="http://www.bignerdranch.com/we-write/objective-c-programming.html">Objective-C Programming: The Big Nerd Ranch Guide</a></h3>
+### [Objective-C Programming: The Big Nerd Ranch Guide](http://www.bignerdranch.com/we-write/objective-c-programming.html)
 
-<p><a href="http://www.bignerdranch.com/we-write/objective-c-programming.html">http://www.bignerdranch.com/we-write/objective-c-programming.html</a></p>
+[http://www.bignerdranch.com/we-write/objective-c-programming.html](http://www.bignerdranch.com/we-write/objective-c-programming.html)
 
-<p>This is <em>the</em> book on Objective-C. It&#39;ll get you fluent in C, Objective-C, and some other great programming concepts. It&#39;s worth a read and a re-read.</p>
+This is *the* book on Objective-C. It'll get you fluent in C, Objective-C, and some other great programming concepts. It's worth a read and a re-read.
 
-<h2>iOS</h2>
+## iOS
 
-<p>Now that you&#39;ve got a handle on Objective-C, you can dive into the iOS ecosystem and start writing apps for iOS devices of all shapes and sizes. Get your feet wet with these resources.</p>
+Now that you've got a handle on Objective-C, you can dive into the iOS ecosystem and start writing apps for iOS devices of all shapes and sizes. Get your feet wet with these resources.
 
-<h3><a href="https://www.codeschool.com/courses/try-ios">Try iOS</a></h3>
+### [Try iOS](https://www.codeschool.com/courses/try-ios)
 
-<p><a href="https://www.codeschool.com/courses/try-ios">https://www.codeschool.com/courses/try-ios</a></p>
+[https://www.codeschool.com/courses/try-ios](https://www.codeschool.com/courses/try-ios)
 
-<p>Get a quick, broad overview of iOS and the anatomy of an iOS app with Code School&#39;s basic course.</p>
+Get a quick, broad overview of iOS and the anatomy of an iOS app with Code School's basic course.
 
-<p>When you finish that, you can complete the rest of the iOS track.</p>
+When you finish that, you can complete the rest of the iOS track.
 
-<h3><a href="https://www.codeschool.com/courses/ios-operation-models">iOS Operation: Models</a></h3>
+### [iOS Operation: Models](https://www.codeschool.com/courses/ios-operation-models)
 
-<p><a href="https://www.codeschool.com/courses/ios-operation-models">https://www.codeschool.com/courses/ios-operation-models</a></p>
+[https://www.codeschool.com/courses/ios-operation-models](https://www.codeschool.com/courses/ios-operation-models)
 
-<p>Learn iOS development as you organize and move your app data from Controllers to Models. This sequel to Try iOS will help you master the use of Models.</p>
+Learn iOS development as you organize and move your app data from Controllers to Models. This sequel to Try iOS will help you master the use of Models.
 
-<h3><a href="https://www.codeschool.com/courses/ios-operation-mapkit">iOS Operation: MapKit</a></h3>
+### [iOS Operation: MapKit](https://www.codeschool.com/courses/ios-operation-mapkit)
 
-<p><a href="https://www.codeschool.com/courses/ios-operation-mapkit">https://www.codeschool.com/courses/ios-operation-mapkit</a></p>
+[https://www.codeschool.com/courses/ios-operation-mapkit](https://www.codeschool.com/courses/ios-operation-mapkit)
 
-<p>Learn Apple&#39;s MapKit framework for adding real-world location data to your app. Display location data loaded from the web and combine frameworks to enrich data.</p>
+Learn Apple's MapKit framework for adding real-world location data to your app. Display location data loaded from the web and combine frameworks to enrich data.
 
-<h3><a href="https://www.codeschool.com/courses/exploring-google-maps-for-ios">Exploring Google Maps for iOS</a></h3>
+### [Exploring Google Maps for iOS](https://www.codeschool.com/courses/exploring-google-maps-for-ios)
 
-<p><a href="https://www.codeschool.com/courses/exploring-google-maps-for-ios">https://www.codeschool.com/courses/exploring-google-maps-for-ios</a></p>
+[https://www.codeschool.com/courses/exploring-google-maps-for-ios](https://www.codeschool.com/courses/exploring-google-maps-for-ios)
 
-<p>Learn how to display Google Maps in your app with the Google Maps SDK for iOS. Get started with the basics and use interactive maps to learn as you explore!</p>
+Learn how to display Google Maps in your app with the Google Maps SDK for iOS. Get started with the basics and use interactive maps to learn as you explore!
 
-<h3><a href="https://www.codeschool.com/courses/core-ios-7">Core iOS 7</a></h3>
+### [Core iOS 7](https://www.codeschool.com/courses/core-ios-7)
 
-<p><a href="https://www.codeschool.com/courses/core-ios-7">https://www.codeschool.com/courses/core-ios-7</a></p>
+[https://www.codeschool.com/courses/core-ios-7](https://www.codeschool.com/courses/core-ios-7)
 
-<p>Quickly get up to speed on the core changes of iOS 7. Make your app stand out from the crowd by mastering new APIs and take advantage of great Xcode updates.</p>
+Quickly get up to speed on the core changes of iOS 7. Make your app stand out from the crowd by mastering new APIs and take advantage of great Xcode updates.
 
-<h3><a href="http://www.bignerdranch.com/we-write/ios-programming.html">iOS Programming: The Big Nerd Ranch Guide</a></h3>
+### [iOS Programming: The Big Nerd Ranch Guide](http://www.bignerdranch.com/we-write/ios-programming.html)
 
-<p><a href="http://www.bignerdranch.com/we-write/ios-programming.html">http://www.bignerdranch.com/we-write/ios-programming.html</a></p>
+[http://www.bignerdranch.com/we-write/ios-programming.html](http://www.bignerdranch.com/we-write/ios-programming.html)
 
-<p>This is <em>the</em> book on iOS programming. Just like it&#39;s <em><a href="http://www.bignerdranch.com/we-write/objective-c-programming.html">Objective-C Programming: The Big Nerd Ranch Guide</a></em> cousin, it&#39;s both comprehensive and approachable. Read this one over and over again; it&#39;s a great reference.</p>
+This is *the* book on iOS programming. Just like it's *[Objective-C Programming: The Big Nerd Ranch Guide](http://www.bignerdranch.com/we-write/objective-c-programming.html)* cousin, it's both comprehensive and approachable. Read this one over and over again; it's a great reference.
 
-<h3><a href="http://nsscreencast.com/">NSScreencast</a></h3>
+### [NSScreencast](http://nsscreencast.com/)
 
-<p><a href="http://nsscreencast.com/">http://nsscreencast.com/</a></p>
+[http://nsscreencast.com/](http://nsscreencast.com/)
 
-<p>Weekly bite-sized screencasts on iOS development, a la RailsCasts.</p>
+Weekly bite-sized screencasts on iOS development, a la RailsCasts.
 
-<h3><a href="http://ios.devtools.me/">iOS Dev Tools</a></h3>
+### [iOS Dev Tools](http://ios.devtools.me/)
 
-<p><a href="http://ios.devtools.me/">http://ios.devtools.me/</a></p>
+[http://ios.devtools.me/](http://ios.devtools.me/)
 
-<p>iOS Dev Tools is an incredible list of great iOS development tools, including websites, desktop and mobile apps, back-end services, and design and learning resources.</p>
+iOS Dev Tools is an incredible list of great iOS development tools, including websites, desktop and mobile apps, back-end services, and design and learning resources.
 
-<h2>RubyMotion</h2>
+## RubyMotion
 
-<p>RubyMotion is a toolchain that lets you develop (and test!) native iOS and OS X applications using Ruby. You&#39;ll still need to really understand the iOS SDK (and, it&#39;s definitely recommended to learn Objective-C first, even though RubyMotion lets you code in Ruby), but it&#39;s nice to be able to write iOS applications in the language we all know and love.</p>
+RubyMotion is a toolchain that lets you develop (and test!) native iOS and OS X applications using Ruby. You'll still need to really understand the iOS SDK (and, it's definitely recommended to learn Objective-C first, even though RubyMotion lets you code in Ruby), but it's nice to be able to write iOS applications in the language we all know and love.
 
-<p>Once you buy a <a href="http://www.rubymotion.com/">RubyMotion</a> license, dive into the following resources:</p>
+Once you buy a [RubyMotion](http://www.rubymotion.com/) license, dive into the following resources:
 
-<h3><a href="http://www.rubymotion.com/developer-center/guides/getting-started/">RubyMotion Getting Started</a></h3>
+### [RubyMotion Getting Started](http://www.rubymotion.com/developer-center/guides/getting-started/)
 
-<p>This is a nice, short guide that will get you up and running with RubyMotion quickly with the classic &#39;Hello World&#39; application.</p>
+This is a nice, short guide that will get you up and running with RubyMotion quickly with the classic 'Hello World' application.
 
-<h3><a href="http://nsscreencast.com/episodes/29-rubymotion">RubyMotion NSScreencast</a></h3>
+### [RubyMotion NSScreencast](http://nsscreencast.com/episodes/29-rubymotion)
 
-<p><a href="http://nsscreencast.com/episodes/29-rubymotion">http://nsscreencast.com/episodes/29-rubymotion</a></p>
+[http://nsscreencast.com/episodes/29-rubymotion](http://nsscreencast.com/episodes/29-rubymotion)
 
-<p>Take a deeper dive with the NSScreencast on RubyMotion. It&#39;s a good one.</p>
+Take a deeper dive with the NSScreencast on RubyMotion. It's a good one.
 
-<h3><a href="http://pragmaticstudio.com/screencasts/rubymotion">Pragmatic Programmer Ruby Motion Video</a></h3>
+### [Pragmatic Programmer Ruby Motion Video](http://pragmaticstudio.com/screencasts/rubymotion)
 
-<p><a href="http://pragmaticstudio.com/screencasts/rubymotion">http://pragmaticstudio.com/screencasts/rubymotion</a></p>
+[http://pragmaticstudio.com/screencasts/rubymotion](http://pragmaticstudio.com/screencasts/rubymotion)
 
-<p>This is a great, 50-minute screencast that teaches you how to create a basic iOS app using RubyMotion. It does assume you are familiar with the iOS SDK, however, so keep that in mind.</p>
+This is a great, 50-minute screencast that teaches you how to create a basic iOS app using RubyMotion. It does assume you are familiar with the iOS SDK, however, so keep that in mind.
 
-<h3><a href="http://pragprog.com/book/carubym/rubymotion">The Pragmatic Programmer: RubyMotion</a></h3>
+### [The Pragmatic Programmer: RubyMotion](http://pragprog.com/book/carubym/rubymotion)
 
-<p><a href="http://pragprog.com/book/carubym/rubymotion">http://pragprog.com/book/carubym/rubymotion</a></p>
+[http://pragprog.com/book/carubym/rubymotion](http://pragprog.com/book/carubym/rubymotion)
 
-<p>From the book&#39;s description:</p>
+From the book's description:
 
-<blockquote>
-<p>Make beautiful apps with beautiful code: use the elegant and concise Ruby programming language with RubyMotion to write truly native iOS apps with less code while having more fun. You&#39;ll learn the essentials of creating great apps, and by the end of this book, you&#39;ll have built a fully functional API-driven app. Whether you&#39;re a newcomer looking for an alternative to Objective-C or a hardened Rails veteran, RubyMotion allows you to create gorgeous apps with no compromise in performance or developer happiness.</p>
-</blockquote>
+>Make beautiful apps with beautiful code: use the elegant and concise Ruby programming language with RubyMotion to write truly native iOS apps with less code while having more fun. You'll learn the essentials of creating great apps, and by the end of this book, you'll have built a fully functional API-driven app. Whether you're a newcomer looking for an alternative to Objective-C or a hardened Rails veteran, RubyMotion allows you to create gorgeous apps with no compromise in performance or developer happiness.
 
-<h3><a href="https://github.com/rubymotion/BubbleWrap">BubbleWrap</a></h3>
+### [BubbleWrap](https://github.com/rubymotion/BubbleWrap)
 
-<p><a href="https://github.com/rubymotion/BubbleWrap">https://github.com/rubymotion/BubbleWrap</a></p>
+[https://github.com/rubymotion/BubbleWrap](https://github.com/rubymotion/BubbleWrap)
 
-<p>Play around with this awesome wrapper for RubyMotion that makes it more Ruby-like. It&#39;s awesome.</p>
+Play around with this awesome wrapper for RubyMotion that makes it more Ruby-like. It's awesome.
+-->
 
 <h1>About</h1>
 
