Fix JavaScript overview

--- a/index.html
+++ b/index.html
@@ -576,14 +576,35 @@
 
 <h2>Overview/Review</h2>
 
-<p>http://teamtreehouse.com/library/javascript-foundations
-https://github.com/liammclennan/JavaScript-Koans</p>
+<h3><a href="http://teamtreehouse.com/library/javascript-foundations">JavaScript Foundations</a></h3>
 
-<h3>Javascript Roadtrip</h3>
+<p><a href="http://teamtreehouse.com/library/javascript-foundations">http://teamtreehouse.com/library/javascript-foundations</a></p>
 
-<p>https://www.codeschool.com/courses/javascript-road-trip-part-1
-https://www.codeschool.com/courses/javascript-road-trip-part-2
-https://www.codeschool.com/courses/javascript-road-trip-part-3</p>
+<p>Learn the fundamentals to the JavaScript language. You will learn how to program effectively in JavaScript, the different types, functions, and techniques for writing solid JavaScript.</p>
+
+<h3><a href="https://github.com/liammclennan/JavaScript-Koans">JavaScript Koans</a></h3>
+
+<p><a href="https://github.com/liammclennan/JavaScript-Koans">https://github.com/liammclennan/JavaScript-Koans</a></p>
+
+<p>JavaScript Koans is an interactive learning environment that uses failing tests to introduce students to aspects of JavaScript in a logical sequeunce.</p>
+
+<h3><a href="https://www.codeschool.com/courses/javascript-road-trip-part-1">JavaScript Road Trip, Part 1</a></h3>
+
+<p><a href="https://www.codeschool.com/courses/javascript-road-trip-part-1">https://www.codeschool.com/courses/javascript-road-trip-part-1</a></p>
+
+<p>An introduction to the very basics of the JavaScript language. Build a foundation of JavaScript syntax and learn how to use values, variables, and files.</p>
+
+<h3><a href="https://www.codeschool.com/courses/javascript-road-trip-part-2">JavaScript Road Trip, Part 2</a></h3>
+
+<p><a href="https://www.codeschool.com/courses/javascript-road-trip-part-2">https://www.codeschool.com/courses/javascript-road-trip-part-2</a></p>
+
+<p>A continued introduction to the very basics of the JavaScript language. Learn common programming mechanisms like loops, conditionals, functions, and arrays.</p>
+
+<h3><a href="https://www.codeschool.com/courses/javascript-road-trip-part-3">JavaScript Road Trip, Part 3</a></h3>
+
+<p><a href="https://www.codeschool.com/courses/javascript-road-trip-part-3">https://www.codeschool.com/courses/javascript-road-trip-part-3</a></p>
+
+<p>Continue building intermediate skills within the JavaScript web programming language. Master function expressions, closures, hoisting, objects, and the use of prototypes.</p>
 
 <h2>Object-Oriented JavaScript</h2>
 
