--- a/index.html
+++ b/index.html
@@ -608,8 +608,17 @@
 
 <h2>Object-Oriented JavaScript</h2>
 
-<p>http://teamtreehouse.com/library/programming-stepbystep-objectoriented-javascript-part-1
-http://teamtreehouse.com/library/programming-stepbystep-objectoriented-javascript-part-2</p>
+<h3><a href="http://teamtreehouse.com/library/programming-stepbystep-objectoriented-javascript-part-1">Object-Oriented JavaScript, Part 1</a></h3>
+
+<p><a href="http://teamtreehouse.com/library/programming-stepbystep-objectoriented-javascript-part-1">http://teamtreehouse.com/library/programming-stepbystep-objectoriented-javascript-part-1</a></p>
+
+<p>In this workshop, you&#39;ll listen to discussions between Treehouse teachers, and watch them approach solving a problem through object-oriented JavaScript code.</p>
+
+<h3><a href="http://teamtreehouse.com/library/programming-stepbystep-objectoriented-javascript-part-2">Object-Oriented JavaScript, Part 2</a></h3>
+
+<p><a href="http://teamtreehouse.com/library/programming-stepbystep-objectoriented-javascript-part-2">http://teamtreehouse.com/library/programming-stepbystep-objectoriented-javascript-part-2</a></p>
+
+<p>Continue listening to Treehouse teachers problem-solve as they discuss the solution to their programming problem at a high level. Then, watch as one of them uses the models written in the previous part to hammer out the details of a maze-solving algorithm.</p>
 
 <h2>jQuery</h2>
 
