Add jQuery resources

--- a/index.html
+++ b/index.html
@@ -622,8 +622,25 @@
 
 <h2>jQuery</h2>
 
-<p>https://www.codeschool.com/courses/try-jquery
-https://www.codeschool.com/courses/jquery-the-return-flight</p>
+<p>This should all be review, but it&#39;s worth a quick run through.</p>
+
+<h3><a href="https://www.codeschool.com/courses/try-jquery">Try jQuery</a></h3>
+
+<p><a href="https://www.codeschool.com/courses/try-jquery">https://www.codeschool.com/courses/try-jquery</a></p>
+
+<p>Learn the basic building blocks of jQuery 2.0.</p>
+
+<h3><a href="https://www.codeschool.com/courses/jquery-the-return-flight">jQuery: The Return Flight</a></h3>
+
+<p><a href="https://www.codeschool.com/courses/jquery-the-return-flight">https://www.codeschool.com/courses/jquery-the-return-flight</a></p>
+
+<p>Learn Ajax and add more interactivity to your projects. Discover how to organize your code using jQuery Plugins and Promises.</p>
+
+<h3><a href="http://learn.jquery.com/">jQuery Learning Center</a></h3>
+
+<p><a href="http://learn.jquery.com/">http://learn.jquery.com/</a></p>
+
+<p>There&#39;s a lot more to learn about building web sites and applications with jQuery than can fit in API documentation. If you&#39;re looking for explanations of the basics, workarounds for common problems, best practices, and how-tos, you&#39;re in the right place!</p>
 
 <h2>Books</h2>
 
