Finish JavaScript books section

--- a/index.html
+++ b/index.html
@@ -648,21 +648,41 @@
 
 <p><a href="https://leanpub.com/javascript-allonge/read">https://leanpub.com/javascript-allonge/read</a></p>
 
+<blockquote>
+<p>A strong cup of functions, objects, combinators, and decorators.</p>
+</blockquote>
+
 <h3><a href="http://tddjs.com/">Test-Driven JavaScript Development</a></h3>
 
 <p><a href="http://tddjs.com/">http://tddjs.com/</a></p>
+
+<blockquote>
+<p>Tired of <code>console.log</code>-ing your way out of trouble? Weary from constant fear of cross-browser issues? Scared of making even the slightest change to production code? <strong><em>Test-Driven JavaScript Development</em></strong> teaches you how to solve these issues and more using unit tests and TDD. Rich with examples, the book provides a solid foundation on automated testing, a test-driven walk-through of JavaScript&#39;s unique qualities, and five practical exampels of building solid, reusable, cross-browser JavaScript using TDD.</p>
+</blockquote>
 
 <h3><a href="http://www.amazon.com/Pro-JavaScript-Design-Patterns-Object-Oriented/dp/159059908X">Pro JavaScript Design Patterns</a></h3>
 
 <p><a href="http://www.amazon.com/Pro-JavaScript-Design-Patterns-Object-Oriented/dp/159059908X">http://www.amazon.com/Pro-JavaScript-Design-Patterns-Object-Oriented/dp/159059908X</a></p>
 
+<blockquote>
+<p>With <strong><em>Pro JavaScript Design Patterns</em></strong>, you’ll start with the basics of object–oriented programming in JavaScript applicable to design patterns, including making JavaScript more expressive, inheritance, encapsulation, information hiding, and more. With that covered, you can kick–start your JavaScript development in the second part of the book, where you’ll find detail on how to implement and take advantage of several design patterns in JavaScript, including composites, decorators, façades, adapters, and many more.</p>
+</blockquote>
+
 <h3><a href="http://www.amazon.com/Eloquent-JavaScript-Modern-Introduction-Programming/dp/1593272820">Eloquent JavaScript</a></h3>
 
 <p><a href="http://www.amazon.com/Eloquent-JavaScript-Modern-Introduction-Programming/dp/1593272820">http://www.amazon.com/Eloquent-JavaScript-Modern-Introduction-Programming/dp/1593272820</a></p>
 
+<blockquote>
+<p><strong><em>Eloquent JavaScript</em></strong> goes beyond the cut-and-paste scripts of the recipe books and teaches you to write code that&#39;s elegant and effective. You&#39;ll start with the basics of programming, and learn to use variables, controle structures, functions, and data structures. Then you&#39;ll dive into the real JavaScript artistry: higher-order functions, closures, and object-oriented programming.</p>
+</blockquote>
+
 <h3><a href="http://www.amazon.com/JavaScript-Good-Parts-Douglas-Crockford/dp/0596517742">JavaScript: The Good Parts</a></h3>
 
 <p><a href="http://www.amazon.com/JavaScript-Good-Parts-Douglas-Crockford/dp/0596517742">http://www.amazon.com/JavaScript-Good-Parts-Douglas-Crockford/dp/0596517742</a></p>
+
+<blockquote>
+<p>Most programming languages contain good and bad parts, but JavaScript has more than its share of the bad, having been developed and released in a hurry before it could be refined. This authoritative book scrapes away these bad features to reveal a subset of JavaScript that&#39;s more reliable, readable, and maintainable than the language as a whole—a subset you can use to create truly extensible and efficient code.</p>
+</blockquote>
 
 <h2>Frameworks</h2>
 
