Edit Backbone.js section

--- a/index.html
+++ b/index.html
@@ -688,8 +688,23 @@
 
 <h3>Backbone</h3>
 
-<p>https://www.codeschool.com/courses/anatomy-of-backbonejs
-https://www.codeschool.com/courses/anatomy-of-backbonejs-part-2</p>
+<h3><a href="https://www.codeschool.com/courses/anatomy-of-backbonejs">The Anatomy of Backbone.js</a></h3>
+
+<p><a href="https://www.codeschool.com/courses/anatomy-of-backbonejs">https://www.codeschool.com/courses/anatomy-of-backbonejs</a></p>
+
+<p>Learn Backbone.js and start building sophisticated and structured web apps. Try out Backbone&#39;s JavaScript library with a RESTful JSON interface.</p>
+
+<h3><a href="https://www.codeschool.com/courses/anatomy-of-backbonejs-part-2">The Anatomy of Backbone.js, Part 2</a></h3>
+
+<p><a href="https://www.codeschool.com/courses/anatomy-of-backbonejs-part-2">https://www.codeschool.com/courses/anatomy-of-backbonejs-part-2</a></p>
+
+<p>Learn more advanced Backbone.js for building sophisticated and structured web apps. Take your front-end to the next level with the Anayomy of Backbone Part 2.</p>
+
+<h3><a href="http://javascriptissexy.com/learn-backbone-js-completely/">Learn Backbone.js Completely</a></h3>
+
+<p><a href="http://javascriptissexy.com/learn-backbone-js-completely/">http://javascriptissexy.com/learn-backbone-js-completely/</a></p>
+
+<p>This blog post lists tons of resources that you can go through, in order, to really dig into Backbone.js. It&#39;s a great resource.</p>
 
 <h3>Ember.JS</h3>
 
