Clean up ember.js section

--- a/index.html
+++ b/index.html
@@ -708,9 +708,26 @@
 
 <h3>Ember.JS</h3>
 
-<p>https://www.codeschool.com/courses/warming-up-with-emberjs
-https://github.com/radar/guides/blob/master/ember.md
-https://leanpub.com/emberjs-testingonrails</p>
+<h3><a href="https://www.codeschool.com/courses/warming-up-with-emberjs">Warming Up With Ember.js</a></h3>
+
+<p><a href="https://www.codeschool.com/courses/warming-up-with-emberjs">https://www.codeschool.com/courses/warming-up-with-emberjs</a></p>
+
+<p>Learn to demystify the Ember.js JavaScript framework by breaking it down. See how to build an application from scratch using Ember.js and Twitter Bootstrap.</p>
+
+<h3><a href="http://emberbites.com/">Ember Bites</a></h3>
+
+<p><a href="http://emberbites.com/">http://emberbites.com/</a></p>
+
+<p>These are four awesome, bite-sized Ember tutorials. Go through them. And then do it again.</p>
+
+<h3><a href="https://leanpub.com/emberjs-testingonrails">Ember.js - Testing on Rails</a></h3>
+
+<p><a href="https://leanpub.com/emberjs-testingonrails">https://leanpub.com/emberjs-testingonrails</a></p>
+
+<blockquote>
+<p>Testing Ember.js is a widely discussed topic. Learn some of the things I&#39;ve discovered that aid testing, particularly for Rails developers.
+—Martin Feckie</p>
+</blockquote>
 
 <h3>Angular</h3>
 
