Fix names of JavaScript frameworks

--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
 
 <h2>Frameworks</h2>
 
-<h3>Backbone</h3>
+<h3>Backbone.js</h3>
 
 <h3><a href="https://www.codeschool.com/courses/anatomy-of-backbonejs">The Anatomy of Backbone.js</a></h3>
 
@@ -706,7 +706,7 @@
 
 <p>This blog post lists tons of resources that you can go through, in order, to really dig into Backbone.js. It&#39;s a great resource.</p>
 
-<h3>Ember.JS</h3>
+<h3>Ember.js</h3>
 
 <h3><a href="https://www.codeschool.com/courses/warming-up-with-emberjs">Warming Up With Ember.js</a></h3>
 
@@ -729,11 +729,11 @@
 —Martin Feckie</p>
 </blockquote>
 
-<h3>Angular</h3>
+<h3>AngularJS</h3>
 
 <p>http://teamtreehouse.com/library/building-with-angularjs-and-apis</p>
 
-<h3>Node.JS</h3>
+<h3>Node.js</h3>
 
 <p>https://www.codeschool.com/courses/real-time-web-with-nodejs
 https://leanpub.com/nodebeginner
