Fix quote citation in ember ember - testing on rails book description

--- a/index.html
+++ b/index.html
@@ -725,8 +725,9 @@
 <p><a href="https://leanpub.com/emberjs-testingonrails">https://leanpub.com/emberjs-testingonrails</a></p>
 
 <blockquote>
-<p>Testing Ember.js is a widely discussed topic. Learn some of the things I&#39;ve discovered that aid testing, particularly for Rails developers.
-—Martin Feckie</p>
+<p>Testing Ember.js is a widely discussed topic. Learn some of the things I&#39;ve discovered that aid testing, particularly for Rails developers.</p>
+
+<p>—Martin Feckie</p>
 </blockquote>
 
 <h3>AngularJS</h3>
