--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
 
 <p>This tutorial will guide you through the process of creating a full-stack application. It features step-by-step instructions on how to build a fantasy football application, code snippets of the full application, and explantations on design decisions.</p>
 
-<p>Alternate version <a href="http://www.thinkster.io/angularjs/eHPCs7s87O/angularjs-tutorial-learn-to-rapidly-build-real-time-web-apps-with-firebase">without any backend code using Firebase available here.</a></p>
+<p>Alternate version without any backend code using Firebase available [here].(http://www.thinkster.io/angularjs/eHPCs7s87O/angularjs-tutorial-learn-to-rapidly-build-real-time-web-apps-with-firebase)</p>
 
 <h3><a href="http://toddmotto.com/ultimate-guide-to-learning-angular-js-in-one-day/">Ultimate Guide to Learning AngularJS in One Day</a></h3>
 
