--- a/index.html
+++ b/index.html
@@ -783,10 +783,35 @@
 
 <h3>Node.js</h3>
 
-<p>https://www.codeschool.com/courses/real-time-web-with-nodejs
-https://leanpub.com/nodebeginner
-https://leanpub.com/nodecraftsman
-http://nodeschool.io/</p>
+<h3><a href="https://www.codeschool.com/courses/real-time-web-with-nodejs">Real Time Web with Node.js</a></h3>
+
+<p><a href="https://www.codeschool.com/courses/real-time-web-with-nodejs">https://www.codeschool.com/courses/real-time-web-with-nodejs</a></p>
+
+<p>Learn Node.js and start building lightweight, real-time applications. This interactive course will teach you the fast and scalable perks of Node.js.</p>
+
+<h3><a href="https://leanpub.com/nodebeginner">The Node Beginner Book</a></h3>
+
+<p><a href="https://leanpub.com/nodebeginner">https://leanpub.com/nodebeginner</a></p>
+
+<blockquote>
+<p>A comprehensive Node.js tutorial. The aim of <strong><em>The Node Beginner Book</em></strong> is to get you started with developing applications for Node.js, teaching you everything you need to know about advanced JavaScript along the way.</p>
+</blockquote>
+
+<h3><a href="https://leanpub.com/nodecraftsman">The Node Craftsman Book</a></h3>
+
+<p><a href="https://leanpub.com/nodecraftsman">https://leanpub.com/nodecraftsman</a></p>
+
+<blockquote>
+<p>As the official sequel to <strong><em>The Node Beginner Book</em></strong>, this book will help readers to dive deeper into software development with Node.js and JavaScript, including topics like object-orientation, test-driven development, database handling, web frameworks, and much more!</p>
+
+<p>The aim of <strong><em>The Node Craftsman Book</em></strong> is to help beginning JavaScript programmers who already know how to write basic Node.js applications in mastering JavaScript and Node.js thoroughly.</p>
+</blockquote>
+
+<h3><a href="http://nodeschool.io/">NodeSchool</a></h3>
+
+<p><a href="http://nodeschool.io/">http://nodeschool.io/</a></p>
+
+<p>Choose-your-own-adventure style lessons for learning how to use Node.js. Install these lessons and learn how to use Node.js, npm, and other related tools by writing code to solve realistic problems. The lessons run in your terminal and work on Windows, Mac, and Linux.</p>
 
 <!---
 # iOS & RubyMotion
