Add new codeschool course to angularjs section

--- a/index.html
+++ b/index.html
@@ -777,7 +777,11 @@
 
 <p>This tutorial will guide you through the process of creating a full-stack application. It features step-by-step instructions on how to build a fantasy football application, code snippets of the full application, and explantations on design decisions.</p>
 
-<p>Alternate version without any backend code using Firebase <a href="http://www.thinkster.io/angularjs/eHPCs7s87O/angularjs-tutorial-learn-to-rapidly-build-real-time-web-apps-with-firebase">available here</a>.</p>
+<h3><a href="https://www.codeschool.com/courses/shaping-up-with-angular-js">Shaping Up with AngularJS</a></h3>
+
+<p><a href="https://www.codeschool.com/courses/shaping-up-with-angular-js">https://www.codeschool.com/courses/shaping-up-with-angular-js</a></p>
+
+<p>Learn to use AngularJS by adding behavior to your HTML and speeding up your application&#39;s responsiveness. Get ready to dive into all the angles of AngularJS!</p>
 
 <h3><a href="http://toddmotto.com/ultimate-guide-to-learning-angular-js-in-one-day/">Ultimate Guide to Learning AngularJS in One Day</a></h3>
 
